<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.example.android.adamska_habit_tracker.EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/habit" />

        <EditText
            android:id="@+id/habit_edit"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_per_habit" />

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/day" />

        <Spinner
            android:id="@+id/spinner_day"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:paddingRight="16dp"
            android:spinnerMode="dropdown" />

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/time" />

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:timePickerMode="spinner" />

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/additional" />

        <EditText
            android:id="@+id/additional_edit"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_per_additional" />

    </LinearLayout>
</ScrollView>